package com.cmc.meeting.domain.model;

public enum DeviceStatus {
    AVAILABLE,       // Có sẵn
    UNDER_MAINTENANCE // Đang bảo trì
}