package com.cmc.meeting.domain.model;

public enum ParticipantStatus {
    PENDING,  // Đang chờ trả lời
    ACCEPTED, // Đã chấp nhận
    DECLINED  // Đã từ chối
}