package com.cmc.meeting.domain.model;

public enum RoomStatus {
    AVAILABLE,
    UNDER_MAINTENANCE
}
